# OpenCV

example/: CMakeLists.txt  clean.sh  cmake_install.cmake
